fixed so it wasn't stuck together

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -52,7 +52,7 @@ article {
 }
 
 .hero article {
-    position: absolute;
+    position: relative;
 }
 
 h1 {
